--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "save": "^2.3.3"
   },
   "meteor": {
     "mainModule": {
